--- a/MochaToycarsTests.html
+++ b/MochaToycarsTests.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-        <title>GeiesSICP Mocha</title>
+        <title>Toycars Mocha</title>
         <link rel="stylesheet" type="text/css" href="js/mocha/mocha.css">
 
         <script type="text/javascript" src="js/mocha/utils.js"></script>
