adding dependency from geiespictures

--- a/Racetrack.html
+++ b/Racetrack.html
@@ -11,6 +11,7 @@
     <title>Toycars Races</title>
     <script src="js/lib/geieslists_1.1.js"></script>
     <script src="js/lib/geiesvectors_0.1.js"></script>
+    <script src="js/lib/geiespictures_0.1.js"></script>
     <script src="js/toycars_0.1.js"></script>
 </head>
 <body>
