--- a/Racetrack.html
+++ b/Racetrack.html
@@ -30,7 +30,7 @@
         <input type="text" id="instructions" class="instr" style="width:300px;margin-top:15px"></input>
       </form>
       <p>Insert string and press ENTER</p>
-      <p style="color: red;" id="raceResult">aaaaaa</p>
+      <p style="color: red;" id="raceResult"></p>
     </div>
     <script src="js/racetrack.js"></script>
   </body>
